[tool.poetry]
name = "asciigen"
version = "0.1.0"
description = "Ascii art image generator"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
